--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-PORT=80
+PORT=7001
 TELEGRAM_TOKEN=6152637456:AAFb1mFmgQN_ge3DV2loiXs-OeL58jGLcEA
+
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5433
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=rootroot
+POSTGRES_DB=todo-bot
